@@ -1,6 +1,6 @@
-FROM eclipse-temurin:17-jdk-jammy
+FROM fedora:41
 LABEL org.opencontainers.image.source=https://github.com/opendonationasssistant/oda-recipient-service
 WORKDIR /app
-COPY target/oda-recipient-service-0.1.jar /app
+COPY target/oda-recipient-service /app
 
-CMD ["java","--add-opens","java.base/java.time=ALL-UNNAMED","-jar","oda-recipient-service-0.1.jar"]
+CMD ["./oda-recipient-service"]
